Added board abstraction
Added a board abstraction that handles the board state and drawing the
board state

--- a/drawing.html
+++ b/drawing.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <script src="graphics.js"></script>
+    <script src="board.js"></script>
+    <script src="life.js"></script>
+    <script src="utils.js"></script>
     <style>
         #canvas_container {position: absolute; left: 100px; top: 100px; width: 400px; height: 400px;}
     </style>
