renamed drawing to index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="author" content="Patricia Saylor">
+	<title>Game of Life</title>
 	<!-- Load style sheets -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
 	<link rel="stylesheet" href="font-awesome.min.css">
@@ -35,6 +37,9 @@
 				<li> Any live cell with two or three live neighbors lives on to the next generation.</li>
 				<li> Any dead cell with exactly three live neighbors becomes a live cell in the next generation.</li>
 			</ol>
+
+			<p>The demonstration above starts from a random initial state of live and dead cells and succesively applies the 4 rules to get each new generation. Watch as the chaos melts into order.</p>
+			<small class="pull-right">-Patricia Saylor</small>
 			
 
       </div> <!-- /jumbotron -->
