removed unneeded font-awesome files

--- a/drawing.html
+++ b/drawing.html
@@ -3,13 +3,12 @@
 <head>
 	<meta name="author" content="Patricia Saylor">
 	<title>Game of Life</title>
-
-	<!-- Load external style sheets -->
+	<!-- Load style sheets -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
-	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
-	<!-- Load any external Javascript libraries -->
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
+	<link rel="stylesheet" href="font-awesome.min.css">
+
+	<!-- Load any supplemental Javascript libraries -->
+	<script type="text/javascript" src="external_js/jquery-1.9.0.min.js"></script>
 	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
 
 	<!-- Load my own Javascript files and stylesheets -->
@@ -42,7 +41,6 @@
 			<p>The demonstration above starts from a random initial state of live and dead cells and succesively applies the 4 rules to get each new generation. Watch as the chaos melts into order.</p>
 			<small class="pull-right">-Patricia Saylor</small>
 			
-
       </div> <!-- /jumbotron -->
 
     </div> <!-- /container -->
