--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<!-- Load external style sheets -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
-	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
+	
 	<!-- Load any external Javascript libraries -->
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
@@ -29,17 +29,17 @@
 			    <canvas id="canvas"></canvas>
 			</div>
 
-			<p>Conway's Game of Life fascinated the world by showing that complex patterns could arise out of simple rules applied to seeming chaos. The game features a 2D grid of cells, each of which lives or dies based on its interaction with its neighbors as follows:
-			</p>
+			<small>Conway's Game of Life fascinated the world by showing that complex patterns could arise out of simple rules applied to seeming chaos. The game features a 2D grid of cells, each of which lives or dies based on its interaction with its neighbors as follows:
+			</small>
 
 			<ol> 
-				<li>Any live cell with fewer than two live neighbors dies, as if by underpopulation.</li>
-				<li> Any live cell with more than three live neighbors dies, as if by overcrowding.</li>
-				<li> Any live cell with two or three live neighbors lives on to the next generation.</li>
-				<li> Any dead cell with exactly three live neighbors becomes a live cell in the next generation.</li>
+				<li><small> Any live cell with fewer than two live neighbors dies, as if by underpopulation.</small></li>
+				<li><small> Any live cell with more than three live neighbors dies, as if by overcrowding.</small></li>
+				<li><small> Any live cell with two or three live neighbors lives on to the next generation.</small></li>
+				<li><small> Any dead cell with exactly three live neighbors becomes a live cell in the next generation.</small></li>
 			</ol>
 
-			<p>The demonstration above starts from a random initial state of live and dead cells and succesively applies the 4 rules to get each new generation. Watch as the chaos melts into order.</p>
+			<small>The demonstration above starts from a random initial state of live and dead cells and succesively applies the 4 rules to get each new generation. Watch as the chaos melts into order.</small>
 			<small class="pull-right">-Patricia Saylor</small>
 			
 
