--- a/test.html
+++ b/test.html
@@ -14,5 +14,6 @@
 	<script src="utils.js"></script>
 	<script src="board.js"></script>
 	<script src="life.js"></script>
+	<script src="graphics.js"></script>
 </body>
 </html>
