removed all drawing from board.js
extracting drawing functions to drawing.js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
 
 	<!-- Load my own Javascript files and stylesheets -->
-    <script type="text/javascript" src="graphics.js"></script>
+    <script type="text/javascript" src="drawing.js"></script>
     <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="board.js"></script>
 	<script type="text/javascript" src="life.js"></script>
@@ -27,8 +27,7 @@
 		<div class="jumbotron">
 	        <h1 class="title">Conway's Game of Life</h1>
   
-	        <div id="canvas_container">
-			    <canvas id="canvas" height="400" width="400"></canvas>
+	        <div id="board_container">
 			</div>
 
 			<small>Conway's Game of Life fascinated the world by showing that complex patterns could arise out of simple rules applied to seeming chaos. The game features a 2D grid of cells, each of which lives or dies based on its interaction with its neighbors as follows:
