--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
 
 	<!-- Load my own Javascript files and stylesheets -->
+	<script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="drawing.js"></script>
-    <script type="text/javascript" src="utils.js"></script>
     <script type="text/javascript" src="board.js"></script>
 	<script type="text/javascript" src="life.js"></script>
 	<script type="text/javascript" src="setup.js"></script>
@@ -28,6 +28,28 @@
 	        <h1 class="title">Conway's Game of Life</h1>
   
 	        <div id="board_container">
+			</div>
+
+			<div id="control-row">
+				<div class="btn-group" data-toggle="buttons">
+					<label class="btn btn-success" id="play-btn">
+						<input type="radio" name="play-pause-option" id="option1"> Play
+						<span class="glyphicon glyphicon-play"></span>
+					</label>
+					<label class="btn btn-warning" id="pause-btn">
+						<input type="radio" name="play-pause-option" id="option2"> Pause
+						<span class="glyphicon glyphicon-pause"></span>
+					</label>
+				</div>
+				<button type="button" class="btn btn-primary" id="clear-btn">Clear
+					<span class="glyphicon glyphicon-refresh"></span>
+				</button>
+				<button type="button" class="btn btn-primary" id="random-btn">Randomize
+					<span class="glyphicon glyphicon-random"></span>
+				</button>
+				<button type="button" class="btn btn-primary" id="separate-btn">Separate
+					<span class="glyphicon glyphicon-th-large"></span>
+				</button>
 			</div>
 
 			<small>Conway's Game of Life fascinated the world by showing that complex patterns could arise out of simple rules applied to seeming chaos. The game features a 2D grid of cells, each of which lives or dies based on its interaction with its neighbors as follows:
